# indestructible-auto-ops

./: .devcontainer.json  .env.example  .eslintrc.json  .gitignore  .gl-index.json  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yml  ABSOLUTE-ZERO-TOLERANCE-ACHIEVED.md  AEP-GOVERNANCE-AUDIT-MIGRATION-COMPLETE.md  AGENTS.md  ARCHITECTURE-COMPLETE.md  ARCHITECTURE-TO-CODE-IMPLEMENTATION-SUMMARY.md  ARCHITECTURE.md  ARTIFACTS_UPGRADE_V10.md  AUTONOMY-BOUNDARY-UPGRADE-SUMMARY.md  BACKEND_GOVERNANCE_PROGRESS_REPORT.md  BARCODE-QR-CODE-FIX-COMPLETE.md  BRANCH_QUICK_REFERENCE.md  BRANCH_STRATEGY.md  BUG_FIX_COMPLETION_REPORT.md  CHANGELOG.md  CODE-OF-CONDUCT.md  CODE-SCANNING-REPORT.md  CODEQL_SECURITY_FIXES.md  CODE_OF_CONDUCT.md  COMPLETE-WORK-SUMMARY.md  COMPLETE_UPGRADE_ROADMAP.md  COMPREHENSIVE_IMPLEMENTATION_REVIEW.md  CONTRIBUTING.md  CURRENT_GOVERNANCE_STATUS_ANALYSIS.md  Compliance Metrics Exporter.py  DATA-SYNC-INTEGRATION-COMPLETION-REPORT.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_STRATEGY.md  DIRECTORY-STRUCTURE-VERIFICATION.md  DUAL_PATH_IMPLEMENTATION_SUMMARY.md  Deprecation & LTS Scanner.sh  Dockerfile  (+280 more)
.agent_hooks/: run_all_hooks.py
.backup_gl_to_gov_20260209_214301/: .checkov.yaml  .eslintrc.json  .markdownlint.json  .npmrc  .secrets.baseline  BACKFILL_OPERATION_FLOW.md  CODE-OF-CONDUCT.md  CODEQL-SECURITY-FIXES.md  G-ATTRIBUTES-QUICK-REFERENCE.md  PHASE_2_COMPLETION_REPORT.md  PLATFORM-CONSOLIDATION-PLAN.md  ROOT-DIRECTORY-OVERVIEW.md  apply_mnga_enforcement.py  autonomy-boundary-upgrade-todo.md  backend_governance_todo.md  enforce_rules_evidence.patch  ethereum-governance-logger.js  expand_enforce_checks.py  fix_enforce_rules_evidence.py  gl_to_gov_migration_report_20260209_214142.json  internal_cross_comparison.py  migration-strategy.md  naming_scan_report.json  one_stop_diagnostics_spec  phase-1  phase1-semantic-models.md  post_quantum_hsm_integration_system  quick_dependency_scan.py  readme.md  remaining_checks.py  requirements.txt  ruff.toml  step1_internal_retrieval.py  test_mcg_v2.py  verification-proof.md
.backup_gl_to_gov_20260209_214318/: .checkov.yaml  .eslintrc.json  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  BACKFILL_OPERATION_DEMO.md  CODEQL-SECURITY-FIXES.md  COMPREHENSIVE-IMPLEMENTATION-REVIEW.md  DEVELOPMENT-STRATEGY.md  DIRECTORY-STRUCTURE-VERIFICATION.md  ECOSYSTEM-ROOT-LAYER-DEFINITION.md  G-SPECIFICATION-DISCOVERY-INDEX.md  G-SPECIFICATION-README.md  PHASE_2_COMPLETION_REPORT.md  PLATFORM-CONSOLIDATION-PLAN.md  ROOT-DIRECTORY-OVERVIEW.md  ROOT-RESPONSIBILITY-BOUNDARIES.md  actual-tree-structure.txt  add_gl_markers.py  add_gl_markers_v2.py  add_new_checks.py  analyze_external_dependencies.py  analyze_monica_docs.py  apply_gl_anchors_to_repo.py  apply_mnga_enforcement.py  autonomy-boundary-upgrade-todo.md  current_structure_backup.txt  docker-compose.yaml  execution-plan.md  external-dependency-removal-strategy.md  external_cross_comparison.py  file_sample.txt  fix_evidence_system_v3.py  fix_yaml_imports.py  gl_to_gov_migration_report_20260209_214301.json  gov-platform-universe-restructure-plan.md  gov-registry-deliverables-summary  gov_files.txt  governance-enforcement-layer-todo.md  governance-enforcement-progress.md  (+30 more)
.backup_gl_to_gov_20260209_214318/iaops/: pyproject.toml
.backup_gl_to_gov_20260209_214318/iaops/GOVERNANCE/: Engineering_Patch.txt  Governance_Compliance_Check.txt
.backup_gl_to_gov_20260209_214318/iaops/src/indestructibleautoops/: patcher.py
.backup_gl_to_gov_20260209_214318/iaops/tests/: test_end_to_end.py
.config/: requirements-docx.txt
.devcontainer/: post-create.sh
.github/: CODE-REVIEW-CHECKLIST.md  COPILOT-INSTRUCTIONS-ARCHITECTURE.md  COPILOT-INSTRUCTIONS-SUMMARY.md  COPILOT_INSTRUCTIONS_ARCHITECTURE.md  COPILOT_INSTRUCTIONS_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.governance/: event-stream.jsonl
IndestructibleAutoOps/: PROMPT_FULL_MACHINE.txt
aep-governance-audit/: GL-AEP-FULL-AUDIT-REPORT.md
archive/: README.md
audit-reports/: FINAL-SUMMARY.md  engineering-recommendations.md  real-audit-report.md
auto_task_project/: DEPLOYMENT-GUIDE.md  FINAL-SUMMARY.md  README.md  REGISTRY-MIGRATION-REPORT.md  auto_executor.py  config.py  event_bus.py  logger.py  main.py  scheduler.py  test_framework.py  verify_complete.py
backup-v7-artifacts/: global-resource-graph.json
config/: analysis-context.json  canonical_semantic.json  code-scanning-report.json  collaboration-config.yaml  compliance-fix-log.json  config.yml  cross-comparison-summary.json  enterprise-platform-architecture.yaml  external-cross-comparison-report.json  platform-deployment.yaml  semantic_ast.json  step1_internal_retrieval.json  unified-config-schema.yaml
dashboard/: README.md  dashboard.js
deployment-scripts/: 01_ARCHITECTURE_ANALYSIS.md  todo.md
designs/: closed-loop-integrity-analysis.md  gl-native-governance-module-gap-analysis.md  gl-native-technical-implementation.md  multi-agent-architecture.md
docs/: AUTONOMY_CLASSIFICATION_FRAMEWORK.md  BACKUP_RESTORE_GUIDE.md  CI-CD-GUIDE.md  CI-STATUS-REPORT.md  CI_COMPREHENSIVE_GUIDE.md  COPILOT_MEMORY.md  CROSS_PLATFORM_GUIDE.md  CROSS_PLATFORM_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDELINES.md  DOCUMENTATION_PORTAL.md  DUAL-PATH-ARCHITECTURE.md  ENTERPRISE_INFRASTRUCTURE_COMPLETE_REPORT.md  ENTERPRISE_INFRASTRUCTURE_PHASES_11-15_SUMMARY.md  ENTERPRISE_PRODUCTION_COMPLETE_SUMMARY.md  ENTERPRISE_PRODUCTION_INFRASTRUCTURE_SUMMARY.md  EXTENDED_PLATFORMS_GUIDE.md  EXTENDED_PLATFORMS_SUMMARY.md  (+34 more)
ecosystem/auto-task/: auto_executor.py  pyproject.toml
ecosystem/auto-task/tasks/: task_角色執行器.py
ecosystem/auto-task/tasks/registries/platform-registry/: platform-manifest.yaml
governance/l2_domains/enterprise/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
governance/l2_domains/enterprise/scripts/: bootstrap.sh  quick-verify.sh  validate-prereqs.sh
governance/l2_domains/enterprise/src/governance/: enforcer.py
governance/l2_domains/enterprise/tests/: test_fast.py
(+13858 files in other folders)
