[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "indestructibleautoops"
version = "0.1.0"
description = "Skeleton-to-ClosedLoop project integrator for IndestructibleAutoOps"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0.1",
  "jsonschema>=4.21.1",
  "click>=8.1.7",
  "blake3>=0.4.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.3.0",
]

[project.scripts]
indestructibleautoops = "indestructibleautoops.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"